--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -1,65 +1,139 @@
-$main: #2a313b;
-$main-background:#f9f9f9;
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,700);
+
+@keyframes checked-anim {
+    50% {
+        width: 3000px;
+        height: 3000px;
+    }
+    100% {
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+    }
+}
+@keyframes not-checked-anim {
+    0% {
+        width: 3000px;
+        height: 3000px;
+    }
+}
+li, a {
+    margin: 75px 0 -55px 0;
+    color: #03A9F4;
+    font: 14pt "Roboto", sans-serif;
+    font-weight: 700;
+    line-height: 1.8;
+    text-decoration: none;
+    text-transform: none;
+    list-style: none;
+    outline: 0;
+    display: none;
+}
+li {
+    // width: 230px;
+    text-indent: 56px;}
+a:focus {
+    display: block;
+    color: #333;
+    background-color: #eee;
+    transition: all .5s;
+}
+aside {
+    position: absolute;
+    color: white;
+    top: 35%;
+    right: 10%;
+    text-align: right;
+}
+h1 {
+    line-height: 0;
+    font-size: 4vw;
+    font-weight: 700;
+}
+h3 {
+    float: right;
+    line-height: .3;
+    font-size: 2.5vw;
+    font-weight: lighter;
+}
+h4 {
+    float: right;
+    margin-left: -2%;
+    font-size: 1.2vw;
+    font-weight: lighter;
+}
 
 html, body {
-    background: $main-background;
-    font-family: 'Poppins', sans-serif;
-    color: $main;
+    margin: 0;
+    padding: 0;
+    background-color: #03A9F4;
+
+    font-family: 'Roboto', sans-serif;
+    overflow: hidden;
 }
 
-.jumbotron {
-    color:$main-background;
-    background-color: $main;
-    border-radius: none;
-    p{
-        font-weight: 450;
-    }
-
-    h1{
-        font-weight: 800;
-    }
-    
+#trigger, #burger, #burger:before, #burger:after {
+    position: absolute;
+    top: 25px;
+    left: 25px;
+    background: #03A9F4;
+    width: 30px;
+    height: 5px;
+    transition: .2s ease;
+    cursor: pointer;
+    z-index: 1;
 }
-
-.btn {
-    background-color: #e1f5fe;
-    color: #0288d1;
-    padding: 10px 15px;
-    border-color: #e1f5fe;
+#trigger {
+    height: 25px;
+    background: none;
 }
-
-
-
-.btn:hover,
-.btn:focus {
-  box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
-  transform: translateY(-0.25em);
-  background:#ede7f6;
-    color: #311b92;
-    border-color: #311b92;
-}
-
-.coloredHr{
-    background: #673ab7;
-}
-
-.card{
-    background: $main-background;
-    p{
-        color:$main;
-    }
-}
-
-.footer {
-    position: fixed;
+#burger:before {
+    content: " ";
+    top: 10px;
     left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color:$main;
-    color: $main-background;
-    text-align: center;
-    padding-bottom: 0.5%;
-    padding-top: 0.5%;
-  }
+}
+#burger:after {
+    content: " ";
+    top: 20px;
+    left: 0;
+}
+#menu-toggle:checked + #trigger + #burger {
+    top: 35px;
+    transform: rotate(180deg);
+    transition: transform .2s ease;
+}
 
-
+#menu-toggle:checked + #trigger + #burger:before {
+    width: 20px;
+    top: -2px;
+    left: 18px;
+    transform: rotate(45deg) translateX(-5px);
+    transition: transform .2s ease;
+}
+#menu-toggle:checked + #trigger + #burger:after {
+    width: 20px;
+    top: 2px;
+    left: 18px;
+    transform: rotate(-45deg) translateX(-5px);
+    transition: transform .2s ease;
+}
+#menu {
+    position: absolute;
+    margin: 0; padding: 0;
+    width: 110px;
+    height: 110px;
+    background-color: #fff;
+    border-bottom-right-radius: 100%;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.26);
+    animation: not-checked-anim .2s both;
+    transition: .2s;
+}
+#menu-toggle:checked + #trigger + #burger + #menu {
+    animation: checked-anim 1s ease both;
+}
+#menu-toggle:checked + #trigger ~ #menu > li, a {
+    display: block;
+}
+[type="checkbox"]:not(:checked), [type="checkbox"]:checked {
+    display: none;
+}
