--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,192 +1,159 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,700);
-@-webkit-keyframes checked-anim {
-  50% {
-    width: 3000px;
-    height: 3000px;
-  }
-  100% {
-    width: 100%;
-    height: 100%;
-    border-radius: 0;
-  }
-}
-@keyframes checked-anim {
-  50% {
-    width: 3000px;
-    height: 3000px;
-  }
-  100% {
-    width: 100%;
-    height: 100%;
-    border-radius: 0;
-  }
+@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
+@import url("https://fonts.googleapis.com/css?family=Lato:300,400,700,900&subset=latin-ext");
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-@-webkit-keyframes not-checked-anim {
-  0% {
-    width: 3000px;
-    height: 3000px;
-  }
+body {
+  padding: 100px 0;
 }
 
-@keyframes not-checked-anim {
-  0% {
-    width: 3000px;
-    height: 3000px;
-  }
+img {
+  width: 100%;
+  vertical-align: middle;
 }
 
-li, a {
-  margin: 75px 0 -55px 0;
-  color: #03A9F4;
-  font: 14pt "Roboto", sans-serif;
-  font-weight: 700;
-  line-height: 1.8;
-  text-decoration: none;
-  text-transform: none;
-  list-style: none;
-  outline: 0;
-  display: none;
+.head {
+  text-align: center;
+  font-family: 'Lato', sans-serif;
 }
 
-li {
-  text-indent: 56px;
-}
-
-a:focus {
+.blog-item img {
   display: block;
-  color: #333;
-  background-color: #eee;
-  -webkit-transition: all .5s;
-  transition: all .5s;
 }
 
-aside {
-  position: absolute;
-  color: white;
-  top: 35%;
-  right: 10%;
-  text-align: right;
-}
-
-h1 {
-  line-height: 0;
-  font-size: 4vw;
-  font-weight: 700;
-}
-
-h3 {
-  float: right;
-  line-height: .3;
-  font-size: 2.5vw;
-  font-weight: lighter;
-}
-
-h4 {
-  float: right;
-  margin-left: -2%;
-  font-size: 1.2vw;
-  font-weight: lighter;
-}
-
-html, body {
-  margin: 0;
-  padding: 0;
-  background-color: #03A9F4;
-  font-family: 'Roboto', sans-serif;
+.blog-item a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 50px;
   overflow: hidden;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  max-width: 1000px;
+  margin: auto;
+  color: #333;
+  font-family: 'Lato', sans-serif;
+  font-size: 16px;
+  border-radius: 6px;
+  margin-bottom: 50px;
+  text-decoration: none;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
 }
 
-#trigger, #burger, #burger:before, #burger:after {
-  position: absolute;
-  top: 25px;
-  left: 25px;
-  background: #03A9F4;
-  width: 30px;
+.blog-item a:hover {
+  -webkit-box-shadow: 0 10px 50px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 10px 50px 0 rgba(0, 0, 0, 0.2);
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+}
+
+.blog-item .icon {
+  width: 35%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-right: 50px;
+  border-radius: 6px;
+  overflow: hidden;
+  -webkit-box-shadow: 0 15px 26px rgba(0, 0, 0, 0.4);
+          box-shadow: 0 15px 26px rgba(0, 0, 0, 0.4);
+}
+
+.blog-item .content {
+  width: 65%;
+}
+
+.blog-item .content .title {
+  font-size: 21px;
+  text-transform: capitalize;
+  color: #25aae1;
+  font-weight: 600;
+  font-family: 'Lato', sans-serif;
+}
+
+.blog-item .content .title .blog-date {
+  font-size: 12px;
+  margin-left: 20px;
+  color: #333;
+  font-family: 'Lato', sans-serif;
+}
+
+.blog-item .content .title .blog-date:before {
+  content: '/';
+  color: #2bb673;
+  font-size: 25px;
+  top: auto;
+  position: relative;
+  margin-right: 10px;
+}
+
+.blog-item .content .rounded {
+  margin-left: 0;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.blog-item .item-arrow {
+  height: 20px;
+  width: 15%;
+  position: relative;
+  text-align: center;
+  font-size: 35px;
+  left: 0;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+}
+
+.blog-item a:hover > .item-arrow {
+  /*padding-left: 40px;*/
+  color: #25aae1;
+  left: 30px;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+}
+
+.rounded {
+  width: 70px;
   height: 5px;
-  -webkit-transition: .2s ease;
-  transition: .2s ease;
-  cursor: pointer;
-  z-index: 1;
+  border-radius: 6px;
+  background-image: -webkit-gradient(linear, left top, right top, from(#25aae1), to(#40e495));
+  background-image: linear-gradient(to right, #25aae1, #40e495);
+  /* background: #2bb769; */
+  margin-left: 0;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
-#trigger {
-  height: 25px;
-  background: none;
-}
-
-#burger:before {
-  content: " ";
-  top: 10px;
-  left: 0;
-}
-
-#burger:after {
-  content: " ";
-  top: 20px;
-  left: 0;
-}
-
-#menu-toggle:checked + #trigger + #burger {
-  top: 35px;
-  -webkit-transform: rotate(180deg);
-          transform: rotate(180deg);
-  -webkit-transition: -webkit-transform .2s ease;
-  transition: -webkit-transform .2s ease;
-  transition: transform .2s ease;
-  transition: transform .2s ease, -webkit-transform .2s ease;
-}
-
-#menu-toggle:checked + #trigger + #burger:before {
-  width: 20px;
-  top: -2px;
-  left: 18px;
-  -webkit-transform: rotate(45deg) translateX(-5px);
-          transform: rotate(45deg) translateX(-5px);
-  -webkit-transition: -webkit-transform .2s ease;
-  transition: -webkit-transform .2s ease;
-  transition: transform .2s ease;
-  transition: transform .2s ease, -webkit-transform .2s ease;
-}
-
-#menu-toggle:checked + #trigger + #burger:after {
-  width: 20px;
-  top: 2px;
-  left: 18px;
-  -webkit-transform: rotate(-45deg) translateX(-5px);
-          transform: rotate(-45deg) translateX(-5px);
-  -webkit-transition: -webkit-transform .2s ease;
-  transition: -webkit-transform .2s ease;
-  transition: transform .2s ease;
-  transition: transform .2s ease, -webkit-transform .2s ease;
-}
-
-#menu {
-  position: absolute;
-  margin: 0;
-  padding: 0;
-  width: 110px;
-  height: 110px;
-  background-color: #fff;
-  border-bottom-right-radius: 100%;
-  -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
-          box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
-  -webkit-animation: not-checked-anim .2s both;
-          animation: not-checked-anim .2s both;
-  -webkit-transition: .2s;
-  transition: .2s;
-}
-
-#menu-toggle:checked + #trigger + #burger + #menu {
-  -webkit-animation: checked-anim 1s ease both;
-          animation: checked-anim 1s ease both;
-}
-
-#menu-toggle:checked + #trigger ~ #menu > li, a {
-  display: block;
-}
-
-[type="checkbox"]:not(:checked), [type="checkbox"]:checked {
-  display: none;
+@media screen and (max-width: 768px) {
+  .blog-item .content {
+    width: 100%;
+    margin-top: 35px;
+  }
+  .blog-item .content .title {
+    font-size: 18px;
+  }
+  .blog-item .item-arrow {
+    margin: auto;
+  }
+  .blog-item .icon {
+    width: 100%;
+  }
+  .blog-item .icon img {
+    width: 100%;
+    height: 150px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .blog-item {
+    width: 92%;
+    margin: auto;
+  }
+  .blog-item a {
+    display: block;
+    padding: 30px;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
