--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -21,88 +21,87 @@ img {
     font-family: 'Lato', sans-serif;
 }
 
-.blog-item img {
-  display: block;
+.blog-item {
+    img {
+        display: block;
+      }
+
+      a {
+        display: flex;
+        padding: 50px;
+        overflow: hidden;
+        align-items: center;
+        max-width: 1000px;
+        margin: auto;
+        color: #333;
+        font-family: 'Lato', sans-serif;
+        font-size: 16px;
+        border-radius: 6px;
+        margin-bottom: 50px;
+        text-decoration: none;
+        -webkit-transition: all .3s ease;
+        transition: all .3s ease;
+    }
+    a:hover {
+        box-shadow: 0 10px 50px 0 rgba(0, 0, 0, 0.2);
+        -webkit-transition: all .3s ease;
+        transition: all .3s ease;
+    }  
+
+    .icon {
+        width: 35%;
+        object-fit: cover;
+        margin-right: 50px;
+        border-radius: 6px;
+        overflow: hidden;
+        box-shadow: 0 15px 26px rgba(0, 0, 0, 0.4);
+    }
+
+    .content {
+        width: 65%;
+
+        .title {
+            font-size: 21px;
+            text-transform: capitalize;
+            color: #25aae1;
+            font-weight: 600;
+            font-family: 'Lato', sans-serif;
+
+            .blog-date {
+                font-size: 12px;
+                margin-left: 20px;
+                color: #333;
+                font-family: 'Lato', sans-serif;
+            }
+            .blog-date:before {
+                content: '/';
+                color: #2bb673;
+                font-size: 25px;
+                top: auto;
+                position: relative;
+                margin-right: 10px;
+            }
+        }
+
+        .rounded {
+            margin-left: 0;
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
+
+    }
+    .item-arrow {
+        height: 20px;
+        width: 15%;
+        position: relative;
+        text-align: center;
+        font-size: 35px;
+        left: 0;
+        -webkit-transition: all .3s ease;
+        transition: all .3s ease;
+    }
 }
 
-.blog-item a {
-    display: flex;
-    padding: 50px;
-    overflow: hidden;
-    align-items: center;
-    max-width: 1000px;
-    margin: auto;
-    color: #333;
-    font-family: 'Lato', sans-serif;
-    font-size: 16px;
-    border-radius: 6px;
-    margin-bottom: 50px;
-    text-decoration: none;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
-}
-
-.blog-item a:hover {
-    box-shadow: 0 10px 50px 0 rgba(0, 0, 0, 0.2);
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
-}
-
-.blog-item .icon {
-    width: 35%;
-    object-fit: cover;
-    margin-right: 50px;
-    border-radius: 6px;
-    overflow: hidden;
-    box-shadow: 0 15px 26px rgba(0, 0, 0, 0.4);
-}
-
-.blog-item .content {
-    width: 65%;
-}
-
-.blog-item .content .title {
-    font-size: 21px;
-    text-transform: capitalize;
-    color: #25aae1;
-    font-weight: 600;
-    font-family: 'Lato', sans-serif;
-}
-
-
-
-.blog-item .content .title .blog-date {
-    font-size: 12px;
-    margin-left: 20px;
-    color: #333;
-    font-family: 'Lato', sans-serif;
-}
-
-.blog-item .content .title .blog-date:before {
-    content: '/';
-    color: #2bb673;
-    font-size: 25px;
-    top: auto;
-    position: relative;
-    margin-right: 10px;
-}
-
-.blog-item .content .rounded {
-    margin-left: 0;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-.blog-item .item-arrow {
-    height: 20px;
-    width: 15%;
-    position: relative;
-    text-align: center;
-    font-size: 35px;
-    left: 0;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
-}
 
 .blog-item a:hover > .item-arrow {
     /*padding-left: 40px;*/
