--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -9,6 +9,7 @@
 
 body {
     padding: 100px 0;
+    background: #2E2F40;
 }
 
 img {
@@ -19,6 +20,10 @@ img {
 .head{
     text-align: center;
     font-family: 'Lato', sans-serif;
+    color: #fff;
+    h1{
+        color: #EF4B3F
+    }
 }
 
 .blog-item {
@@ -33,7 +38,7 @@ img {
         align-items: center;
         max-width: 1000px;
         margin: auto;
-        color: #333;
+        color: #fff;
         font-family: 'Lato', sans-serif;
         font-size: 16px;
         border-radius: 6px;
@@ -63,19 +68,19 @@ img {
         .title {
             font-size: 21px;
             text-transform: capitalize;
-            color: #25aae1;
+            color: #EF4B3F;
             font-weight: 600;
             font-family: 'Lato', sans-serif;
 
             .blog-date {
                 font-size: 12px;
                 margin-left: 20px;
-                color: #333;
+                color: #fff;
                 font-family: 'Lato', sans-serif;
             }
             .blog-date:before {
                 content: '/';
-                color: #2bb673;
+                color: #860255;
                 font-size: 25px;
                 top: auto;
                 position: relative;
@@ -105,7 +110,7 @@ img {
 
 .blog-item a:hover > .item-arrow {
     /*padding-left: 40px;*/
-    color: #25aae1;
+    color: #860255;
     left: 30px;
     -webkit-transition: all .3s ease;
     transition: all .3s ease;
@@ -115,7 +120,7 @@ img {
     width: 70px;
     height: 5px;
     border-radius: 6px;
-    background-image: linear-gradient(to right, #25aae1, #40e495);
+    background-image: linear-gradient(to right, #860255, #EF4B3F);
     /* background: #2bb769; */
     margin-left: 0;
     margin-top: 10px;
